--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Saint Systems",
+            "name": "Saint Systems"
         }
     ],
     "require": {
